Fix sticky navbar issue on mobile (change overflow-x to clip)

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,7 @@ body {
   line-height: 1.7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 img {
@@ -299,8 +299,9 @@ p {
    5. NAVIGATION
    ============================================================ */
 .navbar {
+  position: -webkit-sticky;
   position: sticky;
-  top: -1px;
+  top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
